[package]
name = "gyard"
version = "0.1.1"
edition = "2021"
keywords = ["rpn", "shunting", "yard"]
categories = ["algorithms"]
authors = ["Julian Alberts"]
description = "A generic shunting yard algorithm implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Julian-Alberts/generic_shunting_yard"

[dependencies]

